added test design documnet and fixed minor input clearing error in client command

--- a/server/www/ratchat.html
+++ b/server/www/ratchat.html
@@ -402,6 +402,7 @@
 				const oldGUID = localStorage.getItem('ratGUID');
 				if (!oldGUID) {
 					systemMessage("you ain't got no ID, you ain't gettin in this bar.", 'e-li');
+					input.value = '';
 					return;
 				}
 				systemMessage(`Your GUID is: ${oldGUID}`, 'i-li')
