hardcoded html entitys for scrollbar buttons to prevent encoding issues

--- a/server/www/closed.html
+++ b/server/www/closed.html
@@ -227,11 +227,11 @@
                 </div>
 
                 <div class="fake-scrollbar">
-                    <button class="fake-scroll-button" id="btn-up">▲</button>
+                    <button class="fake-scroll-button" id="btn-up">&#9650;</button>
                     <div class="fake-scroll-track" id="track">
                         <div id="fake-scroll-thumb"></div>
                     </div>
-                    <button class="fake-scroll-button" id="btn-down">▼</button>
+                    <button class="fake-scroll-button" id="btn-down">&#9660;</button>
                 </div>
                 
                 <div id="user-sidebar">
