fixed issues 3, 8, 9, 10, 11 - didn't test much tho so maybe some new issues have cropped up

--- a/server/www/ratchat.html
+++ b/server/www/ratchat.html
@@ -80,7 +80,7 @@
 		}
 
 		#user-list {
-			flex-grow: 1; /* Pushes the lurker div down */
+			flex-grow: 1;
 			overflow-y: auto; /* Only the names scroll */
 			list-style: none;
 			padding: 0;
